<resources>
    <string name="app_name">LearnEnglish</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="e_mail">E-mail</string>
    <string name="sign_up">Sign up</string>
    <string name="new_user">New user?</string>
    <string name="next">Next</string>
    <string name="not_the_first_time_here">Not the first time here?</string>
    <string name="new_naccount">New\nAccount</string>
    <string name="_1">1</string>
    <string name="_2">/2</string>
    <string name="steps">steps</string>
    <string name="log_in">Log in</string>
    <string name="upload_a_profile_picture_optional">Upload a profile picture\n(optional)</string>
    <string name="username">Username</string>
    <string name="phone">MOBILE NO</string>
    <string name="user_name">User Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="gender">GENDER</string>
    <string name="blood_group">Email</string>
    <string name="address">ADDRESS</string>
    <string name="age">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="finish">Finish</string>
    <string name="check">Check</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="translate_this_sentence">Translate this sentence</string>

</resources>
