<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".view.LoginActivity">

<ImageView
    android:layout_width="150dp"
    android:layout_height="100dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"
    android:layout_marginStart="16dp"/>
    <!--android:src="@drawable/logo"-->
    <!--/>-->
<EditText
    android:id="@+id/editText_login_name"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="185dp"
    android:layout_marginStart="60dp"
    android:background="@drawable/login_edittext_background"
    android:drawableStart="@drawable/ic_person_black_24dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:drawablePadding="10dp"
    android:ems="10"
    android:fontFamily="sans-serif"
    android:inputType="text"
    android:hint="@string/user_name"
    android:textColorHint="#70FFFFFF"
    android:textColor="#000000" />

<EditText
    android:id="@+id/pass"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_below="@+id/editText_login_name"
    android:layout_marginTop="20dp"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="60dp"
    android:background="@drawable/login_edittext_background"
    android:drawablePadding="10dp"
    android:drawableStart="@drawable/ic_power_settings_new_black_24dp"
    android:ems="10"
    android:hint="Password"
    android:inputType="textPassword"
    android:paddingEnd="15dp"
    android:paddingStart="15dp"
    android:fontFamily="sans-serif"
    android:textColor="@color/colorPrimary"
    android:textColorHint="#000000" />


<Button
    android:id="@+id/button_signin"
    android:background="@drawable/login_signin_background"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="60dp"
    android:layout_below="@+id/pass"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="35dp"
    android:textStyle="bold"
    android:textSize="16sp"
    android:textColor="@color/colorAccent"
    android:text="@string/log_in" />

    <TextView
        android:id="@+id/textView_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_signin"
        android:layout_alignStart="@+id/button_signin"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="121dp"
        android:text="@string/new_user"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_signin"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="120dp"
        android:layout_toEndOf="@+id/textView_signup"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold" />


</RelativeLayout>