<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.RegisterActivity">


    <EditText
        android:id="@+id/editText_login_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="74dp"
        android:background="@drawable/login_edittext_background"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#70FFFFFF" />

    <EditText
        android:id="@+id/editText_login_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/editText_login_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:autofillHints="email"
        android:background="@drawable/login_edittext_background"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/user_name"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#70FFFFFF" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="243dp"
        android:autofillHints="password"
        android:background="@drawable/login_edittext_background"
        android:drawableStart="@drawable/ic_power_settings_new_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:importantForAutofill="yes"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/c_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="285dp"
        android:autofillHints="password"
        android:background="@drawable/login_edittext_background"
        android:drawableStart="@drawable/ic_power_settings_new_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/confirm_password"
        android:importantForAutofill="yes"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#000000" />


    <Button
        android:id="@+id/button_signin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/c_pass"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/login_signin_background"
        android:text="@string/finish"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />



</RelativeLayout>